cabal-version:      2.4
name:               servant-sample
version:            0.1.0.0
synopsis:

homepage:           https://github.com/tana-gh/servant-sample

license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src
    
    exposed-modules:
        Sample.Api,
        Sample.Api.GetAllUsers,
        Sample.Api.GetUser,
        Sample.Api.LogIn,
        Sample.Api.SignUp,
        Sample.Api.Types,
        Sample.Api.Utils.Token,
        Sample.App,
        Sample.Config,
        Sample.Database,
        Sample.Database.User,
        Sample.Key,
        Sample.Migrations,
        Sample.Password,
        Sample.Token

    build-depends:
        base ^>=4.14.1.0,
        relude,
        aeson,
        bcrypt,
        bytestring,
        conduit,
        either,
        esqueleto,
        filepath,
        monad-logger,
        persistent,
        persistent-sqlite,
        persistent-template,
        resource-pool,
        servant-auth-server,
        servant-server,
        unliftio-core

    extensions:
        BangPatterns,
        BinaryLiterals,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DerivingStrategies,
        DeriveTraversable,
        DoAndIfThenElse,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        InstanceSigs,
        KindSignatures,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NamedFieldPuns,
        NoImplicitPrelude,
        OverloadedStrings,
        PartialTypeSignatures,
        PatternGuards,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeOperators,
        TypeFamilies,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns

executable servant-sample
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude,
        warp

    extensions:
        BangPatterns,
        BinaryLiterals,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DerivingStrategies,
        DeriveTraversable,
        DoAndIfThenElse,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        InstanceSigs,
        KindSignatures,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NamedFieldPuns,
        NoImplicitPrelude,
        OverloadedStrings,
        PartialTypeSignatures,
        PatternGuards,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeOperators,
        TypeFamilies,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns

executable generate-key
    default-language: Haskell2010
    hs-source-dirs:   scripts
    main-is:          generate-key.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude

    extensions:
        BangPatterns,
        BinaryLiterals,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DerivingStrategies,
        DeriveTraversable,
        DoAndIfThenElse,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        InstanceSigs,
        KindSignatures,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NamedFieldPuns,
        NoImplicitPrelude,
        OverloadedStrings,
        PartialTypeSignatures,
        PatternGuards,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeOperators,
        TypeFamilies,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns

executable do-migration
    hs-source-dirs:   scripts
    default-language: Haskell2010
    main-is:          do-migration.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude,
        persistent

    extensions:
        BangPatterns,
        BinaryLiterals,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DerivingStrategies,
        DeriveTraversable,
        DoAndIfThenElse,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        InstanceSigs,
        KindSignatures,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NamedFieldPuns,
        NoImplicitPrelude,
        OverloadedStrings,
        PartialTypeSignatures,
        PatternGuards,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeOperators,
        TypeFamilies,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns

test-suite servant-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude,
        aeson,
        either,
        hspec,
        hspec-core,
        hspec-wai,
        hspec-wai-json,
        mtl,
        servant-server,
        transformers

    extensions:
        BangPatterns,
        BinaryLiterals,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DerivingStrategies,
        DeriveTraversable,
        DoAndIfThenElse,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        InstanceSigs,
        KindSignatures,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NamedFieldPuns,
        NoImplicitPrelude,
        OverloadedStrings,
        PartialTypeSignatures,
        PatternGuards,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeOperators,
        TypeFamilies,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns
