cabal-version:      2.4
name:               servant-sample
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common exe-options
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

common common-extensions
    default-extensions:
        BangPatterns,
        BinaryLiterals,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveDataTypeable,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DerivingStrategies,
        DeriveTraversable,
        DoAndIfThenElse,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        InstanceSigs,
        KindSignatures,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NamedFieldPuns,
        NoImplicitPrelude,
        OverloadedStrings,
        PartialTypeSignatures,
        PatternGuards,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TemplateHaskell,
        TupleSections,
        TypeOperators,
        TypeFamilies,
        TypeSynonymInstances,
        UndecidableInstances,
        ViewPatterns

library
    import: common-extensions

    exposed-modules:
        Sample.Api,
        Sample.Api.GetAllUsers,
        Sample.Api.GetUser,
        Sample.Api.LogIn,
        Sample.Api.SignUp,
        Sample.Api.Types,
        Sample.Api.Utils.Token,
        Sample.App,
        Sample.Config,
        Sample.Database,
        Sample.Database.User,
        Sample.Key,
        Sample.Migrations,
        Sample.Password,
        Sample.Token

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        relude,
        aeson,
        bcrypt,
        bytestring,
        conduit,
        either,
        esqueleto,
        filepath,
        monad-logger,
        persistent,
        persistent-sqlite,
        persistent-template,
        resource-pool,
        servant-auth-server,
        servant-server,
        unliftio-core

    hs-source-dirs:   src
    default-language: Haskell2010

executable servant-sample
    import: exe-options
    import: common-extensions

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude,
        warp

    hs-source-dirs:   app
    default-language: Haskell2010

executable generate-key
    import: exe-options
    import: common-extensions

    default-language: Haskell2010
    hs-source-dirs:   scripts
    main-is:          generate-key.hs

    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude

executable do-migration
    import: exe-options
    import: common-extensions

    default-language: Haskell2010
    hs-source-dirs:   scripts
    main-is:          do-migration.hs

    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude,
        persistent

test-suite servant-sample-test
    import: exe-options
    import: common-extensions

    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.14.1.0,
        servant-sample,
        relude,
        aeson,
        either,
        hspec,
        hspec-core,
        hspec-wai,
        hspec-wai-json,
        mtl,
        servant-server,
        transformers
